Update to 26.1.1
Fix the respawning not restarting when leaving and rejoining game

Update the rest to 26.1.1

Update Common to 26.1.1

Update gradle project to 26.1.1