@@ -4,7 +4,7 @@ import com.google.common.collect.ContiguousSet;
 import com.google.common.collect.DiscreteDomain;
 import com.google.common.collect.Range;
 import com.yungnickyoung.minecraft.betterendisland.BetterEndIslandCommon;
-import com.yungnickyoung.minecraft.betterendisland.world.DragonRespawnStage;
+import com.yungnickyoung.minecraft.betterendisland.world.BetterDragonRespawnStage;
 import com.yungnickyoung.minecraft.betterendisland.world.IBetterDragonFight;
 import com.yungnickyoung.minecraft.betterendisland.world.IEndSpike;
 import com.yungnickyoung.minecraft.betterendisland.world.feature.BetterEndPodiumFeature;
@@ -14,7 +14,7 @@ import com.yungnickyoung.minecraft.betterendisland.world.util.EndSpikeUtils;
 import com.yungnickyoung.minecraft.betterendisland.world.util.ExitPortalUtils;
 import com.yungnickyoung.minecraft.betterendisland.world.util.WorldgenUtils;
 import it.unimi.dsi.fastutil.objects.ObjectArrayList;
-import net.minecraft.Util;
+import net.minecraft.util.Util;
 import net.minecraft.core.BlockPos;
 import net.minecraft.server.level.ServerBossEvent;
 import net.minecraft.server.level.ServerLevel;
@@ -26,18 +26,23 @@ import net.minecraft.util.RandomSource;
 import net.minecraft.util.Unit;
 import net.minecraft.world.damagesource.DamageSource;
 import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.EntityReference;
 import net.minecraft.world.entity.boss.enderdragon.EndCrystal;
 import net.minecraft.world.entity.boss.enderdragon.EnderDragon;
 import net.minecraft.world.level.ChunkPos;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.state.pattern.BlockPattern;
-import net.minecraft.world.level.dimension.end.DragonRespawnAnimation;
-import net.minecraft.world.level.dimension.end.EndDragonFight;
+import net.minecraft.world.level.dimension.end.DragonRespawnStage;
+import net.minecraft.world.level.dimension.end.EnderDragonFight;
+import net.minecraft.world.level.levelgen.Heightmap;
 import net.minecraft.world.level.levelgen.feature.EndPlatformFeature;
 import net.minecraft.world.level.levelgen.feature.EndPodiumFeature;
+import net.minecraft.world.level.levelgen.feature.EndSpikeFeature;
 import net.minecraft.world.level.levelgen.feature.SpikeFeature;
 import net.minecraft.world.level.levelgen.feature.configurations.FeatureConfiguration;
+import net.minecraft.world.level.saveddata.SavedData;
+import org.jspecify.annotations.Nullable;
 import org.spongepowered.asm.mixin.Final;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.Shadow;
@@ -46,96 +51,151 @@ import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 
-import javax.annotation.Nullable;
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
 
-@Mixin(EndDragonFight.class)
-public abstract class EndDragonFightMixin implements IBetterDragonFight {
-    @Shadow public abstract void resetSpikeCrystals();
-    @Shadow public abstract void tryRespawn();
-    @Shadow protected abstract void updatePlayers();
-    @Shadow protected abstract boolean isArenaLoaded();
-    @Shadow protected abstract void findOrCreateDragon();
-    @Shadow protected abstract void updateCrystalCount();
-    @Shadow protected abstract EnderDragon createNewDragon();
-    @Shadow @Nullable protected abstract BlockPattern.BlockPatternMatch findExitPortal();
-    @Shadow protected abstract void respawnDragon(List<EndCrystal> $$0);
-    @Shadow protected abstract boolean hasActiveExitPortal();
-    @Shadow protected abstract void spawnNewGateway();
-
-    @Shadow @Final private ServerBossEvent dragonEvent;
+@Mixin(EnderDragonFight.class)
+public abstract class EnderDragonFightMixin extends SavedData implements IBetterDragonFight {
+    private static final @Unique int MINIMUM_PORTAL_Y = 5;
+    private static final @Unique int FALLBACK_PORTAL_Y = 65;
+    @Shadow @Final private static int MAX_TICKS_BEFORE_DRAGON_RESPAWN;
+    @Shadow @Final private static int TIME_BETWEEN_CRYSTAL_SCANS;
+    @Shadow @Final public static int TIME_BETWEEN_PLAYER_SCANS;
+    @Shadow @Final public static int ARENA_TICKET_LEVEL;
+    @Shadow @Final private static int GATEWAY_COUNT;
+    @Shadow @Final private static int GATEWAY_DISTANCE;
+    @Shadow @Final private List<Integer> gateways;
+    @Shadow private ServerBossEvent dragonEvent;
     @Shadow private boolean dragonKilled;
     @Shadow private int ticksSinceLastPlayerScan;
-    @Shadow @Final private ServerLevel level;
+    @Shadow private ServerLevel level;
     @Shadow private boolean needsStateScanning;
-    @Shadow @Nullable private List<EndCrystal> respawnCrystals;
+    @Shadow private List<EntityReference<EndCrystal>> respawnCrystals;
     @Shadow private int respawnTime;
-    @Shadow @Nullable private BlockPos portalLocation;
-    @Shadow @Nullable private UUID dragonUUID;
+    @Shadow private @Nullable DragonRespawnStage respawnStage;
+    @Shadow private @Nullable UUID dragonUUID;
+    @Shadow private @Nullable BlockPos exitPortalLocation;
     @Shadow private int ticksSinceDragonSeen;
     @Shadow private int ticksSinceCrystalsScanned;
-    @Shadow private boolean previouslyKilled;
+    @Shadow private boolean hasPreviouslyKilledDragon;
+    @Shadow private int aliveCrystals;
 
-    @Shadow private int crystalsAlive;
-    @Shadow @Nullable private DragonRespawnAnimation respawnStage;
-    @Shadow @Final private ObjectArrayList<Integer> gateways;
+    @Shadow
+    protected abstract void findOrCreateDragon();
+    @Shadow
+    protected abstract void updateCrystalCount();
+    @Shadow
+    protected abstract void updatePlayers();
+    @Shadow
+    protected abstract boolean isArenaLoaded();
+    @Shadow
+    public abstract void tryRespawn();
+    @Shadow
+    protected abstract BlockPattern.@Nullable BlockPatternMatch findExitPortal();
 
-    @Unique private DragonRespawnStage bei$dragonRespawnStage;
+    @Shadow
+    protected abstract boolean hasActiveExitPortal();
+
+    @Shadow
+    public abstract void resetSpikeCrystals();
+
+    @Shadow
+    protected abstract void respawnDragon(List<EndCrystal> crystals);
+
+    @Shadow
+    protected abstract void spawnNewGateway();
+
+    @Unique private BetterDragonRespawnStage bei$dragonRespawnStage;
     @Unique private boolean bei$isFirstExitPortalSpawn = true;
     @Unique private boolean bei$hasDragonEverSpawned;
     @Unique private int bei$numTimesDragonKilled = 0;
 
-    @Inject(method = "<init>(Lnet/minecraft/server/level/ServerLevel;JLnet/minecraft/world/level/dimension/end/EndDragonFight$Data;Lnet/minecraft/core/BlockPos;)V", at = @At("RETURN"))
-    public void betterendisland_EndDragonFight(ServerLevel level, long seed, EndDragonFight.Data data, BlockPos origin, CallbackInfo ci) {
-        if (data.isRespawning()) {
-            this.bei$dragonRespawnStage = DragonRespawnStage.START;
+    /**
+     * Set up our state.
+     */
+    @Inject(method = "<init>", at = @At("RETURN"))
+    public void betterendisland_EndDragonFight(boolean needsStateScanning,
+                                               boolean dragonKilled,
+                                               boolean previouslyKilled,
+                                               Optional<DragonRespawnStage> respawnStage,
+                                               int respawnTime,
+                                               Optional<UUID> dragonUUID,
+                                               Optional<BlockPos> exitPortalLocation,
+                                               List<Integer> gateways,
+                                               List<EntityReference<EndCrystal>> respawnCrystals,
+                                               CallbackInfo ci) {
+        if (this.respawnTime != 0) {
+            this.bei$dragonRespawnStage = BetterDragonRespawnStage.START;
         }
+    }
+
+    /**
+     * Don't have the BossEvent be active from the start.
+     */
+    @Inject(method = "init", at = @At("RETURN"))
+    private void betterendisland_initDragonEvent(ServerLevel level, long seed, BlockPos origin, CallbackInfo ci) {
         this.dragonEvent.setVisible(false);
     }
 
+    // Mostly vanilla logic.
     @Inject(method = "tick", at = @At("HEAD"), cancellable = true)
     public void betterendisland_tickFight(CallbackInfo ci) {
+        // As vanilla, except with the possibility that the dragon has not yet spawned.
         this.dragonEvent.setVisible(!this.dragonKilled && this.bei$hasDragonEverSpawned);
-        if (++this.ticksSinceLastPlayerScan >= 20) {
+        if (++this.ticksSinceLastPlayerScan >= TIME_BETWEEN_PLAYER_SCANS) {
             this.updatePlayers();
             this.ticksSinceLastPlayerScan = 0;
         }
 
         if (!this.dragonEvent.getPlayers().isEmpty()) {
-            this.level.getChunkSource().addRegionTicket(TicketType.DRAGON, new ChunkPos(0, 0), 9, Unit.INSTANCE);
+            this.level.getChunkSource().addTicketWithRadius(TicketType.DRAGON, new ChunkPos(0, 0), ARENA_TICKET_LEVEL);
             boolean isArenaLoaded = this.isArenaLoaded();
+
+            // Vanilla exits early here but we continue
 
             // Initial state scanning.
             // Only performed once, when the dimension is first loaded.
+            // As vanilla, except running scanForInitialState rather than scanState.
             if (this.needsStateScanning && isArenaLoaded) {
                 this.scanForInitialState();
                 this.needsStateScanning = false;
+                this.setDirty();
             }
 
             // Update respawn stage if performing respawn
+            // As vanilla, except using bei$dragonRespawnStage instead of respawnStage.
             if (this.bei$dragonRespawnStage != null) {
-                if (this.respawnCrystals == null && isArenaLoaded) {
+                List<EndCrystal> respawnCrystals = this.respawnCrystals.stream()
+                        .map((e) -> e.getEntity(this.level, EndCrystal.class))
+                        .filter(Objects::nonNull)
+                        .toList();
+                if (respawnCrystals.isEmpty() && isArenaLoaded) {
                     this.bei$dragonRespawnStage = null;
+                    // Vanilla does abortRespawnSequence here.
                     this.tryRespawn();
+                    return; //todo does it work fine without this return - I just added it now
                 }
 
-                this.bei$dragonRespawnStage.tick(this.level, (EndDragonFight) (Object) this, this.respawnCrystals, this.respawnTime++);
+                this.bei$dragonRespawnStage.tick(this.level, (EnderDragonFight) (Object) this, respawnCrystals, this.respawnTime++);
+                this.setDirty();
             }
 
             if (!this.dragonKilled) {
-                if ((this.dragonUUID == null || ++this.ticksSinceDragonSeen >= 1200) && isArenaLoaded && this.bei$hasDragonEverSpawned) {
+                // As vanilla, except with our arena loaded + has dragon ever spawned checks
+                if ((this.dragonUUID == null || ++this.ticksSinceLastPlayerScan >= MAX_TICKS_BEFORE_DRAGON_RESPAWN)
+                        && isArenaLoaded && this.bei$hasDragonEverSpawned) {
                     this.findOrCreateDragon();
                     this.ticksSinceDragonSeen = 0;
                 }
 
-                if (++this.ticksSinceCrystalsScanned >= 100 && isArenaLoaded) {
+                // As vanilla
+                if (++this.ticksSinceCrystalsScanned >= TIME_BETWEEN_CRYSTAL_SCANS && isArenaLoaded) {
                     this.updateCrystalCount();
                     this.ticksSinceCrystalsScanned = 0;
                 }
             }
         } else {
-            this.level.getChunkSource().removeRegionTicket(TicketType.DRAGON, new ChunkPos(0, 0), 9, Unit.INSTANCE);
+            // As vanilla
+            this.level.getChunkSource().removeTicketWithRadius(TicketType.DRAGON, new ChunkPos(0, 0), ARENA_TICKET_LEVEL);
         }
         ci.cancel();
     }
@@ -150,29 +210,29 @@ public abstract class EndDragonFightMixin implements IBetterDragonFight {
         this.dragonEvent.setVisible(false);
 
         // Get portal pos
-        if (this.portalLocation == null || this.portalLocation.getY() < 5 || forcePortalPosReset) {
+        if (this.exitPortalLocation == null || this.exitPortalLocation.getY() < MINIMUM_PORTAL_Y || forcePortalPosReset) {
             BetterEndIslandCommon.LOGGER.info("Tried to reset, but need to find the portal first.");
-            if (this.portalLocation == null) {
+            if (this.exitPortalLocation == null) {
                 BetterEndIslandCommon.LOGGER.info("Portal location is currently null.");
-            } else if (this.portalLocation.getY() < 5) {
-                BetterEndIslandCommon.LOGGER.info("Portal location is currently too low: {}", this.portalLocation.getY());
+            } else if (this.exitPortalLocation.getY() < MINIMUM_PORTAL_Y) {
+                BetterEndIslandCommon.LOGGER.info("Portal location is currently too low: {}", this.exitPortalLocation.getY());
             } else {
                 BetterEndIslandCommon.LOGGER.info("Forcing portal position reset...");
             }
             this.findExitPortal();
-            if (this.portalLocation == null || this.portalLocation.getY() < 5 || forcePortalPosReset) { // If still null after finding portal, we find it ourselves
-                if (this.portalLocation == null) {
+            if (this.exitPortalLocation == null || this.exitPortalLocation.getY() < MINIMUM_PORTAL_Y || forcePortalPosReset) { // If still null after finding portal, we find it ourselves
+                if (this.exitPortalLocation == null) {
                     BetterEndIslandCommon.LOGGER.info("Portal location is still null. Placing manually...");
-                } else if (this.portalLocation.getY() < 5) {
-                    BetterEndIslandCommon.LOGGER.info("Portal location is still too low: {}. Placing manually...", this.portalLocation.getY());
+                } else if (this.exitPortalLocation.getY() < MINIMUM_PORTAL_Y) {
+                    BetterEndIslandCommon.LOGGER.info("Portal location is still too low: {}. Placing manually...", this.exitPortalLocation.getY());
                 }
-                this.portalLocation = new BlockPos(0, WorldgenUtils.getSurfacePosAt(this.level, 0, 0), 0);
-                while (this.level.getBlockState(this.portalLocation).is(Blocks.BEDROCK) && this.portalLocation.getY() > this.level.getSeaLevel()) {
-                    this.portalLocation = this.portalLocation.below();
+                this.exitPortalLocation = new BlockPos(0, WorldgenUtils.getSurfacePosAt(this.level, 0, 0), 0);
+                while (this.level.getBlockState(this.exitPortalLocation).is(Blocks.BEDROCK) && this.exitPortalLocation.getY() > this.level.getSeaLevel()) {
+                    this.exitPortalLocation = this.exitPortalLocation.below();
                 }
-                if (this.portalLocation.getY() < 5) {
-                    BetterEndIslandCommon.LOGGER.info("Portal was still placed too low! Force placing at y=65...");
-                    this.portalLocation = new BlockPos(this.portalLocation.getX(), 65, this.portalLocation.getZ());
+                if (this.exitPortalLocation.getY() < MINIMUM_PORTAL_Y) {
+                    BetterEndIslandCommon.LOGGER.info("Portal was still placed too low! Force placing at y={}...", FALLBACK_PORTAL_Y);
+                    this.exitPortalLocation = new BlockPos(this.exitPortalLocation.getX(), FALLBACK_PORTAL_Y, this.exitPortalLocation.getZ());
                 }
             }
         }
@@ -180,7 +240,7 @@ public abstract class EndDragonFightMixin implements IBetterDragonFight {
         // Reset vars to initial state
         this.dragonUUID = null;
         this.dragonKilled = false;
-        this.previouslyKilled = false;
+        this.hasPreviouslyKilledDragon = false;
         this.bei$isFirstExitPortalSpawn = false;
         this.bei$hasDragonEverSpawned = false;
         this.bei$numTimesDragonKilled = 0;
@@ -190,22 +250,23 @@ public abstract class EndDragonFightMixin implements IBetterDragonFight {
         this.needsStateScanning = true;
         this.ticksSinceLastPlayerScan = 0;
         this.ticksSinceDragonSeen = 0;
-        this.crystalsAlive = 0;
+        this.aliveCrystals = 0;
         this.ticksSinceCrystalsScanned = 0;
 
         // Get rid of summoning crystals
-        if (this.respawnCrystals != null) {
-            this.respawnCrystals.forEach(EndCrystal::discard);
-        }
-        this.respawnCrystals = null;
-        List<EndCrystal> remainingSummoningCrystals = EndCrystalUtils.checkForBEIRespawnCrystals(this.level, this.portalLocation.above(1));
+        this.respawnCrystals.stream()
+                .map((e) -> e.getEntity(this.level, EndCrystal.class))
+                .filter(Objects::nonNull)
+                .forEach(EndCrystal::discard);
+        this.respawnCrystals = List.of();
+        List<EndCrystal> remainingSummoningCrystals = EndCrystalUtils.checkForBEIRespawnCrystals(this.level, this.exitPortalLocation.above(1));
         remainingSummoningCrystals.forEach(EndCrystal::discard);
-        remainingSummoningCrystals = EndCrystalUtils.checkForVanillaRespawnCrystals(this.level, this, this.portalLocation);
+        remainingSummoningCrystals = EndCrystalUtils.checkForVanillaRespawnCrystals(this.level, this, this.exitPortalLocation);
         remainingSummoningCrystals.forEach(EndCrystal::discard);
 
         // Get rid of spike crystals
-        List<SpikeFeature.EndSpike> allSpikes = SpikeFeature.getSpikesForLevel(level);
-        for (SpikeFeature.EndSpike spike : allSpikes) {
+        List<EndSpikeFeature.EndSpike> allSpikes = EndSpikeFeature.getSpikesForLevel(this.level);
+        for (EndSpikeFeature.EndSpike spike : allSpikes) {
             for (EndCrystal crystal : this.level.getEntitiesOfClass(EndCrystal.class, spike.getTopBoundingBox())) {
                 crystal.discard();
             }
@@ -215,14 +276,14 @@ public abstract class EndDragonFightMixin implements IBetterDragonFight {
         if (BetterEndIslandCommon.CONFIG.spawnCentralTowerInitially) {
             // Spawn the central tower
             BetterEndPodiumFeature endPodiumFeature = new BetterEndPodiumFeature(true, false, false);
-            BlockPos spawnPos = this.portalLocation.below(5);
+            BlockPos spawnPos = this.exitPortalLocation.below(MINIMUM_PORTAL_Y);
             endPodiumFeature.place(FeatureConfiguration.NONE, this.level, this.level.getChunkSource().getGenerator(), RandomSource.create(), spawnPos);
         } else {
             // Spawn the vanilla podium
             EndPodiumFeature endPodiumFeature = new EndPodiumFeature(false);
-            if (endPodiumFeature.place(FeatureConfiguration.NONE, this.level, this.level.getChunkSource().getGenerator(), RandomSource.create(), this.portalLocation)) {
+            if (endPodiumFeature.place(FeatureConfiguration.NONE, this.level, this.level.getChunkSource().getGenerator(), RandomSource.create(), this.exitPortalLocation)) {
                 int $$2 = Mth.positiveCeilDiv(4, 16);
-                this.level.getChunkSource().chunkMap.waitForLightBeforeSending(new ChunkPos(this.portalLocation), $$2);
+                this.level.getChunkSource().chunkMap.waitForLightBeforeSending(ChunkPos.containing(this.exitPortalLocation), $$2);
             }
         }
 
@@ -235,15 +296,15 @@ public abstract class EndDragonFightMixin implements IBetterDragonFight {
         // Reset spawn platform to initial state
         BlockPos platformPos = ServerLevel.END_SPAWN_POINT.below();
         if (BetterEndIslandCommon.CONFIG.useVanillaSpawnPlatform) {
-            EndPlatformFeature.createEndPlatform(level, platformPos, false);
+            EndPlatformFeature.createEndPlatform(this.level, platformPos, false);
         } else {
-            BetterEndSpawnPlatformFeature.place(level, platformPos, false);
+            BetterEndSpawnPlatformFeature.place(this.level, platformPos, false);
         }
 
         // Remove all gateways
-        for (int i = 0; i < 20; i++) {
-            int x = Mth.floor(96.0D * Math.cos(2.0D * (-Math.PI + 0.15707963267948966D * (double) i)));
-            int z = Mth.floor(96.0D * Math.sin(2.0D * (-Math.PI + 0.15707963267948966D * (double) i)));
+        for (int i = 0; i < GATEWAY_COUNT; i++) {
+            int x = Mth.floor(GATEWAY_DISTANCE * Math.cos(2.0D * (-Math.PI + 0.15707963267948966D * (double) i)));
+            int z = Mth.floor(GATEWAY_DISTANCE * Math.sin(2.0D * (-Math.PI + 0.15707963267948966D * (double) i)));
             BlockPos gatePos = new BlockPos(x, 75, z);
             BlockPos.betweenClosed(gatePos.offset(-1, -4, -1), gatePos.offset(1, 4, 1)).forEach(pos -> {
                 this.level.setBlockAndUpdate(pos, Blocks.AIR.defaultBlockState());
@@ -256,26 +317,29 @@ public abstract class EndDragonFightMixin implements IBetterDragonFight {
         Util.shuffle(this.gateways, RandomSource.create(this.level.getSeed()));
     }
 
+    // Much like vanilla's scanState.
     @Unique
     private void scanForInitialState() {
+        // As vanilla, except using our own spawnPortal.
         BetterEndIslandCommon.LOGGER.info("Scanning for legacy world dragon fight...");
         boolean hasActiveExitPortal = this.hasActiveExitPortal();
         if (hasActiveExitPortal) {
             BetterEndIslandCommon.LOGGER.info("Found that the dragon has been killed in this world already.");
-            this.previouslyKilled = true;
+            this.hasPreviouslyKilledDragon = true;
         } else {
             BetterEndIslandCommon.LOGGER.info("Found that the dragon has not yet been killed in this world.");
-            this.previouslyKilled = false;
+            this.hasPreviouslyKilledDragon = false;
             if (this.findExitPortal() == null) {
                 ExitPortalUtils.spawnPortal(this, this.level, false, false);
             }
         }
 
+        // As vanilla
         List<? extends EnderDragon> dragons = this.level.getDragons();
         if (dragons.isEmpty()) {
             this.dragonKilled = true;
         } else {
-            EnderDragon dragon = dragons.get(0);
+            EnderDragon dragon = dragons.getFirst();
             this.dragonUUID = dragon.getUUID();
             BetterEndIslandCommon.LOGGER.info("Found that there's a dragon still alive ({})", dragon);
             this.dragonKilled = false;
@@ -286,28 +350,40 @@ public abstract class EndDragonFightMixin implements IBetterDragonFight {
             }
         }
 
-        if (!this.previouslyKilled && this.dragonKilled) {
+        if (!this.hasPreviouslyKilledDragon && this.dragonKilled) {
             this.dragonKilled = false;
         }
+
+        this.setDirty();
     }
 
     @Inject(method = "onCrystalDestroyed", at = @At("HEAD"), cancellable = true)
     public void betterendisland_onCrystalDestroyed(EndCrystal crystal, DamageSource damageSource, CallbackInfo ci) {
-        if (this.bei$dragonRespawnStage != null && this.respawnCrystals != null && this.respawnCrystals.contains(crystal)) {
+        /*
+         As vanilla, except checking the BetterDragonRespawnStage.
+         Also the vanilla version of this if statement has 'this.respawnCrystals.contains(crystal)',
+         which I think is a bug as that's always false.
+        */
+        if (this.bei$dragonRespawnStage != null && this.respawnCrystals.stream().anyMatch(ref -> ref.matches(crystal))) {
+            // Vanilla has 'abortRespawnSequence' here.
             BetterEndIslandCommon.LOGGER.info("Aborting dragon respawn sequence");
             this.bei$dragonRespawnStage = null;
             this.respawnTime = 0;
             this.resetSpikeCrystals();
         } else {
+            // As vanilla
             this.updateCrystalCount();
             Entity dragonEntity = this.level.getEntity(this.dragonUUID);
-            if (dragonEntity instanceof EnderDragon) {
-                ((EnderDragon) dragonEntity).onCrystalDestroyed(this.level, crystal, crystal.blockPosition(), damageSource);
+            if (dragonEntity instanceof EnderDragon enderDragon) {
+                enderDragon.onCrystalDestroyed(this.level, crystal, crystal.blockPosition(), damageSource);
             }
         }
         ci.cancel();
     }
 
+    /**
+     * Replacement of vanilla logic.
+     */
     @Inject(method = "tryRespawn", at = @At("HEAD"), cancellable = true)
     public void betterendisland_tryRespawn(CallbackInfo ci) {
         if (this.dragonKilled && this.bei$dragonRespawnStage == null) {
@@ -326,9 +402,13 @@ public abstract class EndDragonFightMixin implements IBetterDragonFight {
         this.spawnDragon(true);
     }
 
+    /**
+     * Some of this is as vanilla 'tryRespawn'.
+     */
     @Unique
     private void spawnDragon(boolean isInitialSpawn) {
-        BlockPos portalPos = this.portalLocation;
+        // As vanilla 'tryRespawn', but using our 'spawnPortal' instead of vanilla 'spawnExitPortal'
+        BlockPos portalPos = this.exitPortalLocation;
         if (portalPos == null) {
             BetterEndIslandCommon.LOGGER.info("Tried to respawn, but need to find the portal first.");
             BlockPattern.BlockPatternMatch portalPatternMatch = this.findExitPortal();
@@ -340,7 +420,7 @@ public abstract class EndDragonFightMixin implements IBetterDragonFight {
                 BetterEndIslandCommon.LOGGER.info("Found the exit portal & saved its location for next time.");
             }
 
-            portalPos = this.portalLocation;
+            portalPos = this.exitPortalLocation;
         }
 
         // Check for all 4 summoning crystals
@@ -349,7 +429,7 @@ public abstract class EndDragonFightMixin implements IBetterDragonFight {
             allCrystals = EndCrystalUtils.checkForVanillaRespawnCrystals(this.level, this, portalPos);
             if (allCrystals.size() != 4) {
                 if (isInitialSpawn) {
-                    BetterEndIslandCommon.LOGGER.info("Unable to find all 4 summoning crystals. This shouldn't happen!");
+                    BetterEndIslandCommon.LOGGER.warn("Unable to find all 4 summoning crystals. This shouldn't happen!");
                 }
                 return;
             }
@@ -363,12 +443,17 @@ public abstract class EndDragonFightMixin implements IBetterDragonFight {
         this.respawnDragon(allCrystals);
     }
 
+    /**
+     * Replacement of vanilla logic. Vanilla builds the portal here, we don't need to.
+     */
     @Inject(method = "respawnDragon", at = @At("HEAD"), cancellable = true)
     private void betterendisland_respawnDragon(List<EndCrystal> crystals, CallbackInfo ci) {
         if ((this.dragonKilled || !this.bei$hasDragonEverSpawned) && this.bei$dragonRespawnStage == null) {
-            this.bei$dragonRespawnStage = DragonRespawnStage.START;
+            this.bei$dragonRespawnStage = BetterDragonRespawnStage.START;
+            // As vanilla
             this.respawnTime = 0;
-            this.respawnCrystals = crystals;
+            this.respawnCrystals = crystals.stream().map(EntityReference::of).toList();
+            this.setDirty();
         }
         ci.cancel();
     }
@@ -377,20 +462,23 @@ public abstract class EndDragonFightMixin implements IBetterDragonFight {
     public void betterendisland_resetSpikeCrystals(CallbackInfo ci) {
         // Reset beam targets for summoning crystals. This is necessary for BEI's crystals because unlike vanilla,
         // the crystals aren't close enough to destroy each other when one is destroyed.
-        if (this.respawnCrystals != null) {
-            for (EndCrystal crystal : this.respawnCrystals) {
-                crystal.setInvulnerable(false);
-                crystal.setBeamTarget(null);
-            }
-        }
+        this.respawnCrystals.stream()
+                .map((e) -> e.getEntity(this.level, EndCrystal.class))
+                .filter(Objects::nonNull)
+                .forEach(crystal -> {
+                    crystal.setInvulnerable(false);
+                    crystal.setBeamTarget(null);
+                });
     }
 
     @Inject(method = "setDragonKilled", at = @At("HEAD"), cancellable = true)
     public void betterendisland_setDragonKilled(EnderDragon dragon, CallbackInfo ci) {
+        // As vanilla
         if (dragon.getUUID().equals(this.dragonUUID)) {
             this.dragonEvent.setProgress(0.0F);
             this.dragonEvent.setVisible(false);
 
+            // Departure from vanilla
             // Special case - killing the dragon for the first time with initial tower disabled but tower on resummoning enabled
             if (this.bei$numTimesDragonKilled == 0
                     && !BetterEndIslandCommon.CONFIG.spawnCentralTowerInitially
@@ -399,35 +487,45 @@ public abstract class EndDragonFightMixin implements IBetterDragonFight {
             }
             ExitPortalUtils.spawnPortal(this, this.level, true, true);
 
-            level.explode(null, this.portalLocation.getX(), this.portalLocation.getY(), this.portalLocation.getZ(), 6.0F, Level.ExplosionInteraction.NONE);
+            this.level.explode(null, this.exitPortalLocation.getX(), this.exitPortalLocation.getY(), this.exitPortalLocation.getZ(), 6.0F, Level.ExplosionInteraction.NONE);
+
+            // As vanilla
             this.spawnNewGateway();
-            if (!this.previouslyKilled || BetterEndIslandCommon.moreDragonEggs || BetterEndIslandCommon.CONFIG.resummonedDragonDropsEgg) {
-                this.level.setBlockAndUpdate(this.portalLocation.above(), Blocks.DRAGON_EGG.defaultBlockState());
+            // As vanilla except for our config checks
+            if (!this.hasPreviouslyKilledDragon || BetterEndIslandCommon.moreDragonEggs || BetterEndIslandCommon.CONFIG.resummonedDragonDropsEgg) {
+                // Vanilla puts it on the top block by heightmap at this.origin, we put it in a slightly different place
+                this.level.setBlockAndUpdate(
+                        this.exitPortalLocation.above(),
+                        Blocks.DRAGON_EGG.defaultBlockState());
             }
 
+            // Departure from vanilla
             // Turn bedrock on spikes into obsidian
             int topY = BetterEndIslandCommon.betterEnd ? 70 : 60;
-            List<SpikeFeature.EndSpike> spikes = SpikeFeature.getSpikesForLevel(level);
+            List<EndSpikeFeature.EndSpike> spikes = EndSpikeFeature.getSpikesForLevel(level);
             spikes.forEach(spike -> {
                 int crystalY = topY + ((IEndSpike) spike).getCrystalYOffset();
-                level.setBlock(new BlockPos(spike.getCenterX(), crystalY - 1, spike.getCenterZ()), Blocks.OBSIDIAN.defaultBlockState(), 3);
+                this.level.setBlock(new BlockPos(spike.getCenterX(), crystalY - 1, spike.getCenterZ()), Blocks.OBSIDIAN.defaultBlockState(), 3);
             });
 
-            this.previouslyKilled = true;
+            // As vanilla
+            this.hasPreviouslyKilledDragon = true;
             this.dragonKilled = true;
             this.bei$numTimesDragonKilled++;
+            this.setDirty();
         }
         ci.cancel();
     }
 
     @Unique
     @Override
-    public void advanceRespawnStage(DragonRespawnStage nextStage) {
+    public void advanceRespawnStage(BetterDragonRespawnStage nextStage) {
         if (this.bei$dragonRespawnStage == null) {
             throw new IllegalStateException("Better Dragon respawn isn't in progress, can't skip ahead in the respawn process.");
         }
         this.respawnTime = 0;
         nextStage.onStart(this.level, this);
+        this.setDirty();
     }
 
     @Unique
@@ -437,7 +535,7 @@ public abstract class EndDragonFightMixin implements IBetterDragonFight {
 
         if (!this.bei$hasDragonEverSpawned || this.bei$dragonRespawnStage != null) {
             long gameTime = this.level.getGameTime();
-            int soundY = this.portalLocation == null ? 80 : this.portalLocation.getY() + 15;
+            int soundY = this.exitPortalLocation == null ? 80 : this.exitPortalLocation.getY() + 15;
 
             if (gameTime % 100 == 0) {
                 // Play bell sound every 4 seconds
@@ -456,7 +554,7 @@ public abstract class EndDragonFightMixin implements IBetterDragonFight {
 
     @Unique
     @Override
-    public DragonRespawnStage getDragonRespawnStage() {
+    public BetterDragonRespawnStage getDragonRespawnStage() {
         return this.bei$dragonRespawnStage;
     }
 
@@ -480,7 +578,7 @@ public abstract class EndDragonFightMixin implements IBetterDragonFight {
 
     @Unique
     @Override
-    public void setDragonRespawnStage(DragonRespawnStage stage) {
+    public void setDragonRespawnStage(BetterDragonRespawnStage stage) {
         this.bei$dragonRespawnStage = stage;
     }
 
